
o [NSE] script_scan_result structure has been changed to a class,
  ScriptResult, that now uses std::strings to hold a Script's output and
  id. This alleviates the need to manage memory on the heap explicitly
  (malloc & free). [Patrick]

o [NSE] The runlevel structure has been placed in the thread record structure
  so we no longer need to manage the runlevel explicitly on the heap. [Patrick]

o Nsock now supports binding to a local address and setting IPv4 options
  with nsi_set_localaddr() and nsi_set_ipoptions(), respectively. [Kris]

o Nmap's Nsock-utilizing subsystems (DNS, NSE, version detection) have been
  updated to support the -S and --ip-options flags. [Kris]

o Added --ip-options support for the connect() scan (-sT). [Kris]

o Changed the order preference of timing ping propes. [Michael]

o Enabled nmap to switch between multiple types of timing pings during port
  scanning. [Michael]

o Some Zenmap crashes have been fixed: trying to "refresh" the output of
  a scan loaded from a file, and trying to re-save a file loaded from
  the command line in some circumstances. [David]

o The file selector in Zenmap now remembers what directory it was last
  looking at. [David]

o Zenmap defaults to showing files matching both *.xml and *.usr in the
  file selector. Previously it only showed those matching *.usr.

o Nmap avoids printing the sending rate in bytes per second during a TCP
  connect scan. Because the number of bytes per probe is not known, it used to
  print
    Current sending rates: 11248.85 packets / s, 0.00 bytes / s.
  Now it will print simply
    Current sending rates: 11248.85 packets / s.

o Nmap's makefile will now install menu items for launching zenmap as
  a privileged or non-privileged process on linux. This will mainly
  effect people who install nmap and zenmap directly from the source
  code. [Michael]

Nmap 4.68 [2008-6-28]

o Doug integrated all of your version detection submissions and